# cybos-server

./: .env.example  .gitignore  ARCHITECTURE.md  DOCUMENTATION_INDEX.md  KOSPI200_BATCH_IMPROVEMENTS.md  KOSPI200_BATCH_README.md  PRD.md  QUICKSTART.md  README.md  README_MONOREPO.md  README_old.md  analyze_history.py  analyze_stock_db.py  check_history_data_type.py  check_kospi200_api.py  daily_price_persistence.py  debug_kospi200_codes.py  debug_price_test.py  debug_update_service.py  detailed_kospi200_analysis.py  docker-compose.yml  find_kospi200_method.py  fix_com_registration.bat  fix_wait_time.py  history_A000080_20250806_131058.csv  kospi200_complete_verification_20250806_131436.csv  kospi200_complete_verification_20250806_132412.csv  kospi200_daily_batch.py  kospi200_daily_batch_update.py  llm.md  manage_history.py  package.json  pyproject.toml  quick_price_test.py  requirements.txt  run_kospi200_batch.bat  run_kospi200_smart_batch.bat  run_server.bat  step_debug.py  test_1.py  (+13 more)
apps/trading-dashboard/: package.json
apps/trading-dashboard/src/lib/: websocket.ts
apps/trading-dashboard/src/types/: pair.ts
docs/: CpCodeMgr.md  CpCybos.md  CpStockCode.md  DATA_MODELS.md
docs/CpDib/: StockMst.md  StockMst2.md  StockMstM.md
docs/CpSysDib/: StockChart
scripts/: README.md  init_database.py  sync_stock_codes.py
services/cointegration-engine/: README.md  main.py  package.json  requirements.txt
services/vector-db/: README.md  main.py  package.json  requirements.txt
src/: __init__.py  main.py
src/api/: __init__.py  app.py
src/api/middleware/: __init__.py  cors.py  logging.py
src/api/routes/: __init__.py  cointegration.py  health.py  pairs.py  prices.py  signals.py  stocks.py  trading.py  websocket.py
src/api/schemas/: __init__.py  cointegration.py  pair.py  price.py  signal.py  stock.py  trading.py
src/core/: __init__.py  constants.py  exceptions.py  interfaces.py  types.py
src/cybos/: __init__.py
src/cybos/codes/: __init__.py  fetcher.py
src/cybos/connection/: __init__.py  status.py  validator.py
src/cybos/history/: fetcher.py
src/cybos/price/: __init__.py  fetcher.py
src/database/: __init__.py  connection.py
src/database/models/: __init__.py  cointegration.py  history.py  pair.py  price.py  signal.py  stock.py
src/remote/: __init__.py  sender.py
src/remote/clients/: __init__.py  rest_client.py  websocket_client.py
src/remote/formatters/: __init__.py  json_formatter.py
src/services/: __init__.py  cointegration_analyzer.py  history_integration_service.py  history_update_service.py  price_update_service.py
src/services/backtest_engine/: __init__.py  engine.py  metrics.py  portfolio.py  simulator.py
src/services/signal_generator/: __init__.py  analyzer.py  generator.py  monitor.py
tests/: __init__.py  conftest.py
tests/integration/: test_cybos_integration.py
tests/unit/: test_backtest_engine.py  test_signal_generator.py  test_stock_validation.py
